--- a/pom.xml
+++ b/pom.xml
@@ -36,7 +36,7 @@
   </distributionManagement>
   <properties>
     <java.version>21</java.version>
-    <revision>2.1-SNAPSHOT</revision>
+    <revision>2.0.1</revision>
     <georchestra.version>24.1-SNAPSHOT</georchestra.version>
     <formatter-maven-plugin.version>2.10.0</formatter-maven-plugin.version>
     <fmt.skip>false</fmt.skip>
