--- a/pom.xml
+++ b/pom.xml
@@ -36,8 +36,8 @@
   </distributionManagement>
   <properties>
     <java.version>21</java.version>
-    <revision>2.0.1-SNAPSHOT</revision>
-    <georchestra.version>24.1-SNAPSHOT</georchestra.version>
+    <revision>2.0.2</revision>
+    <georchestra.version>25.0.0</georchestra.version>
     <formatter-maven-plugin.version>2.10.0</formatter-maven-plugin.version>
     <fmt.skip>false</fmt.skip>
     <fmt.action>format</fmt.action>
