set new oidc user as pending according to datadir props
use findEmail with pending

find pending by email

start to manage pending state exception

manage pending auth failure except

Manage oauth2 duplicate user error

fix code error dupplicate account

display pendingUser login message

--- a/datadir/default.properties
+++ b/datadir/default.properties
@@ -117,3 +117,10 @@ smtpHost=smtp
 # SMTP server domain name
 # Listening port of the SMTP server
 smtpPort=25
+
+### console
+
+# force pending status for each new user
+# see console.properties details
+moderatedSignup=false
+
