--- a/gateway/src/main/resources/messages/login.properties
+++ b/gateway/src/main/resources/messages/login.properties
@@ -14,3 +14,4 @@ separator_login=Or, Login with
 register_no_account=Don't have an account?
 login_message_subtitle=Discover all the datasets
 back_home=Back home
+pending_user = User is pending validation
